crates/tiler-ir/tests/shape-evidence/fail/forge_witness.rs
use tiler_ir::semantic::{SameShape, ShapeWitness};

fn duplicate(witness: ShapeWitness<SameShape>) -> ShapeWitness<SameShape> {
    ShapeWitness { ..witness }
}

fn main() {}
